; ModuleID = '/home/carl/AnghaBench/Atlas/lib/extr_lpeg.c_emptycap_aux.c'
source_filename = "/home/carl/AnghaBench/Atlas/lib/extr_lpeg.c_emptycap_aux.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SHRT_MAX = common dso_local global i32 0, align 4
@IEmptyCapture = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i8*)* @emptycap_aux to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @emptycap_aux(i32* %0, i32 %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = call i32 @luaL_checkint(i32* %9, i32 1)
  store i32 %10, i32* %7, align 4
  %11 = load i32*, i32** %4, align 8
  %12 = call i32* @newpatt(i32* %11, i32 1)
  store i32* %12, i32** %8, align 8
  %13 = load i32*, i32** %4, align 8
  %14 = load i32, i32* %7, align 4
  %15 = icmp slt i32 0, %14
  br i1 %15, label %16, label %20

16:                                               ; preds = %3
  %17 = load i32, i32* %7, align 4
  %18 = load i32, i32* @SHRT_MAX, align 4
  %19 = icmp sle i32 %17, %18
  br label %20

20:                                               ; preds = %16, %3
  %21 = phi i1 [ false, %3 ], [ %19, %16 ]
  %22 = zext i1 %21 to i32
  %23 = load i8*, i8** %6, align 8
  %24 = call i32 @luaL_argcheck(i32* %13, i32 %22, i32 1, i8* %23)
  %25 = load i32*, i32** %8, align 8
  %26 = load i32, i32* @IEmptyCapture, align 4
  %27 = load i32, i32* %7, align 4
  %28 = load i32, i32* %5, align 4
  %29 = call i32 @setinstcap(i32* %25, i32 %26, i32 %27, i32 %28, i32 0)
  ret i32 1
}

declare dso_local i32 @luaL_checkint(i32*, i32) #1

declare dso_local i32* @newpatt(i32*, i32) #1

declare dso_local i32 @luaL_argcheck(i32*, i32, i32, i8*) #1

declare dso_local i32 @setinstcap(i32*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
